@@ -52,7 +52,8 @@
  * opening image files in archives with libarchive (experimental, incomplete; TODO: r665)
  * (experimental) JPEG-2000 support via JasPer (TODO: r660)
  * (experimental) exiftool interface (TODO: r654*)
- * added a ':- INTEGER' syntax, so one can specify the file in the list counting from the end (r743*)
+ * added a ':- INTEGER' syntax, so one can specify the file in the list counting from the end (r744*)
+ * added a _archive_files variable to specify which file names specify archives (r745*)
 
                 Version 0.4
 
